<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="pref_instructions"
        android:title="@string/preferences_getStarted"/>
    <Preference
        android:key="pref_test"
        android:title="@string/preferences_test"/>
    <PreferenceCategory
        android:title="@string/preferences_basic_settings">
        <Preference
            android:key="pref_wpm"
            android:title="@string/preferences_set_wpm"
            android:summary="@string/preferences_set_wpm_summary"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_punct"
            android:summary="@string/preferences_different_speed_punctuation_summary"
            android:title="@string/preferences_different_speed_punctuation"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_advanced">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_showContext"
            android:summary="@string/preferences_showContext_summary"
            android:title="@string/preferences_showContext"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_swipe"
            android:summary="@string/preferences_swipe_summary"
            android:title="@string/preferences_swipe"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_share_feedback">
        <Preference
            android:key="pref_feedback"
            android:summary="@string/preferences_send_feedback_summary"
            android:title="@string/preferences_send_feedback">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/mail_to_me"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>