<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
            style="@style/instructions_text_header"
            android:text="@string/instructions_controls_header"
            android:id="@+id/instructions_header_controls"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/instructions_header_controls"
            android:layout_marginTop="5dp">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        style="@style/instructions_text_ordinar"
                        android:text="@string/instructions_fifth_paragraph"
                        android:id="@+id/text_view_fifth_paragraph"
                        android:layout_alignParentTop="true"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView_screenshot"
                        android:src="@drawable/reader_screenshot"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_below="@+id/text_view_fifth_paragraph"
                        android:layout_centerHorizontal="true"/>

                <TextView
                        style="@style/instructions_text_ordinar"
                        android:text="@string/instructions_emphasis_point"
                        android:id="@+id/text_view_instructions_emphasis_point"
                        android:textColor="#fffa2b2b"
                        android:textStyle="bold"
                        android:layout_below="@+id/imageView_screenshot"/>

                <TextView
                        style="@style/instructions_text_ordinar"
                        android:text="@string/instructions_notification"
                        android:id="@+id/text_view_instructions_notification"
                        android:textColor="#ffA57CA0"
                        android:textStyle="bold"
                        android:layout_below="@+id/text_view_instructions_emphasis_point"/>

                <TextView
                        style="@style/instructions_text_ordinar"
                        android:text="@string/instructions_previous_word_button"
                        android:id="@+id/text_view_instructions_word_button"
                        android:textColor="#fffa8e58"
                        android:textStyle="bold"
                        android:layout_below="@+id/text_view_instructions_notification"/>

                <TextView
                        style="@style/instructions_text_ordinar"
                        android:text="@string/instructions_progress_bar"
                        android:textColor="#ffcaea5a"
                        android:textStyle="bold"
                        android:layout_below="@+id/text_view_instructions_word_button"/>
            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>