<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/textViewUseless1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:typeface="normal"
            android:textStyle="bold"
            android:textSize="22sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textViewHeader"
            android:layout_marginLeft="15dp"
            android:layout_margin="10dp"
            android:typeface="serif"
            android:textSize="20sp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/path"
            android:id="@+id/textViewUseless2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:typeface="normal"
            android:textStyle="bold"
            android:textSize="22sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textViewPath"
            android:layout_marginLeft="15dp"
            android:layout_margin="10dp"
            android:typeface="serif"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position"
            android:id="@+id/textViewUseless3"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:typeface="normal"
            android:textStyle="bold"
            android:textSize="22sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textViewPosition"
            android:layout_marginLeft="15dp"
            android:layout_margin="10dp"
            android:typeface="serif"/>

</LinearLayout>